--- a/templates/CMakeLists.txt.template
+++ b/templates/CMakeLists.txt.template
@@ -134,6 +134,13 @@
 
   cmake_minimum_required(VERSION 3.5.1)
 
+  include(cmake/HunterGate.cmake)
+  HunterGate(
+      URL "https://github.com/soramitsu/soramitsu-hunter/archive/a1fee641062ef26f0703f886eecdb1f2d6d63b64.tar.gz"
+      SHA1 858daf4ddb97f9da62387cf57eacc35343663c4d
+      LOCAL
+  )
+
   set(PACKAGE_NAME          "grpc")
   set(PACKAGE_VERSION       "${settings.cpp_version}")
   set(gRPC_CORE_VERSION     "${settings.core_version}")
@@ -147,11 +154,11 @@
   set(PACKAGE_BUGREPORT     "https://github.com/grpc/grpc/issues/")
   project(<%text>${PACKAGE_NAME}</%text> LANGUAGES C CXX)
 
-  set(gRPC_INSTALL_BINDIR "bin" CACHE STRING "Installation directory for executables")
-  set(gRPC_INSTALL_LIBDIR "lib" CACHE STRING "Installation directory for libraries")
-  set(gRPC_INSTALL_INCLUDEDIR "include" CACHE STRING "Installation directory for headers")
-  set(gRPC_INSTALL_CMAKEDIR "lib/cmake/<%text>${PACKAGE_NAME}</%text>" CACHE STRING "Installation directory for cmake config files")
-  set(gRPC_INSTALL_SHAREDIR "share/grpc" CACHE STRING "Installation directory for root certificates")
+  set(gRPC_INSTALL_BINDIR "bin" CACHE PATH "Installation directory for executables")
+  set(gRPC_INSTALL_LIBDIR "lib" CACHE PATH "Installation directory for libraries")
+  set(gRPC_INSTALL_INCLUDEDIR "include" CACHE PATH "Installation directory for headers")
+  set(gRPC_INSTALL_CMAKEDIR "lib/cmake/<%text>${PACKAGE_NAME}</%text>" CACHE PATH "Installation directory for cmake config files")
+  set(gRPC_INSTALL_SHAREDIR "share/grpc" CACHE PATH "Installation directory for root certificates")
 
   # Options
   option(gRPC_BUILD_TESTS "Build tests" OFF)
@@ -179,33 +186,33 @@
   # "module": build the dependency using sources from git submodule (under third_party)
   # "package": use cmake's find_package functionality to locate a pre-installed dependency
 
-  set(gRPC_ZLIB_PROVIDER "module" CACHE STRING "Provider of zlib library")
+  set(gRPC_ZLIB_PROVIDER "package" CACHE STRING "Provider of zlib library")
   set_property(CACHE gRPC_ZLIB_PROVIDER PROPERTY STRINGS "module" "package")
 
-  set(gRPC_CARES_PROVIDER "module" CACHE STRING "Provider of c-ares library")
+  set(gRPC_CARES_PROVIDER "package" CACHE STRING "Provider of c-ares library")
   set_property(CACHE gRPC_CARES_PROVIDER PROPERTY STRINGS "module" "package")
 
-  set(gRPC_SSL_PROVIDER "module" CACHE STRING "Provider of ssl library")
+  set(gRPC_SSL_PROVIDER "package" CACHE STRING "Provider of ssl library")
   set_property(CACHE gRPC_SSL_PROVIDER PROPERTY STRINGS "module" "package")
 
-  set(gRPC_PROTOBUF_PROVIDER "module" CACHE STRING "Provider of protobuf library")
+  set(gRPC_PROTOBUF_PROVIDER "package" CACHE STRING "Provider of protobuf library")
   set_property(CACHE gRPC_PROTOBUF_PROVIDER PROPERTY STRINGS "module" "package")
 
-  set(gRPC_PROTOBUF_PACKAGE_TYPE "" CACHE STRING "Algorithm for searching protobuf package")
+  set(gRPC_PROTOBUF_PACKAGE_TYPE "CONFIG" CACHE STRING "Algorithm for searching protobuf package")
   set_property(CACHE gRPC_PROTOBUF_PACKAGE_TYPE PROPERTY STRINGS "CONFIG" "MODULE")
 
   if(gRPC_BUILD_TESTS)
-    set(gRPC_GFLAGS_PROVIDER "module" CACHE STRING "Provider of gflags library")
+    set(gRPC_GFLAGS_PROVIDER "package" CACHE STRING "Provider of gflags library")
     set_property(CACHE gRPC_GFLAGS_PROVIDER PROPERTY STRINGS "module" "package")
 
-    set(gRPC_BENCHMARK_PROVIDER "module" CACHE STRING "Provider of benchmark library")
+    set(gRPC_BENCHMARK_PROVIDER "package" CACHE STRING "Provider of benchmark library")
     set_property(CACHE gRPC_BENCHMARK_PROVIDER PROPERTY STRINGS "module" "package")
   else()
     set(gRPC_GFLAGS_PROVIDER "none")
     set(gRPC_BENCHMARK_PROVIDER "none")
   endif()
 
-  set(gRPC_ABSL_PROVIDER "module" CACHE STRING "Provider of absl library")
+  set(gRPC_ABSL_PROVIDER "package" CACHE STRING "Provider of absl library")
   set_property(CACHE gRPC_ABSL_PROVIDER PROPERTY STRINGS "module" "package")
   <%
     # Collect all abseil rules used by gpr, grpc, so on.
